# magnetics

./: pyproject.toml
magnetics/: FreeGS Study.py  dummy_plotter.py
