[project]
name = "magnetics"
version = "0.1.0"
description = "Magnetics based equilibrium reconstruction"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "freegs (>=0.8.2,<0.9.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
spyder-kernels = "2.4"

